
$Date$

VEGAN STABLE VERSIONS

Version 1.15-1 (opened October 10, 2008)

	* new email address of Peter Solymos in Rd files (from r520).

	* fixed row/column mix-up in permatfull (the bugfix part of r525
	transferred by hand).

	* merged r533: warning of ties in nesteddisc().

	* merged r526: typo in wcmdscale() result object item.

	* copied head/tail of summary.cca.

	* merged r516, 519, 521: radfit fixes for 0..2 species
	communities. 

	* merged 522: ordiParseFormula takes care of non-NULL row names.


Version 1.15-0 (released September 30, 2008)

	* based on rev506 at http://r-forge.r-project.org/

	* removed MOStest.

	* removed adipart.

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.14-12 (closed September 26, 2008)

	* add1.cca, drop1.cca: new functions that also implement
	permutation tests with argument test = "permutation", but only use
	default methods with test = "none". Function drop1.cca uses
	anova.cca(..., by = "margin"), and add1.cca implements a new type of
	analysis for single term additions. The immediate reason for
	implementing these tests was that I found out that step(..., test
	= "Chisq") worked(!) producing parametric likelihood ratio tests,
	and this hole had to be closed before users notice this.

	* anova.cca: improved treatment of models where constrained or
	unconstrained models are NULL so that permutation tests are
	impossible. These used to stop with error, but now they return a
	zeroed result so that things like anova(..., by = "term") and
	drop1() work. Added function anova.ccanull to handle these cases.

	* anova.cca(..., by = "margin") was handling wrongly 'x' in ~
	Condition(x) + x + z, or model formulae where same variables were
	used both as Conditions and (aliased) constraints. 

	* anova.cca(..., by = "margin") or function anova.ccabymargin
	gained a 'scope' argument which is used in drop.scope(). 

	* orditkplot & ordipointlabel: improved interface allows passing